# alien-algebra

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: AlienAlgebra.h  CliClient.cpp  Common.h  Game.cpp  Game.h  HintsExtractor.h  Parser.h  QuestGenerator.h  Random.h  Seed.h  Serialization.h  WebClient.cpp  index.html
Web/: index.html  style.css
